FindBugs round 1; tests still pass